--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "npm run build && npm run prod:serve",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
+   "engines": { 
+    "node": "v12.16.2" 
+  },
   "dependencies": {
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.16",
