--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@types/express": "^4.0.36",
-    "@types/node": "12.12.6",
+    "@types/node": "^8.0.15",
     "@types/winston": "^2.3.4",
     "@types/cors": "^2.8.4",
     "@types/socket.io": "^2.1.0",
