--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
    "engines": { 
-    "node": "v12.16.2" 
+    "node": "^12.16.2" 
   },
   "dependencies": {
     "@types/express": "^4.0.36",
