--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.15.3",
     "typescript": "^2.4.2",
     "socket.io": "^2.1.1",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+     "dot-prop": ">=4.2.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
