--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0",
-    "tslint": "^5.5.0"
+    "tslint": "^5.5.0",
+    "@types/node": "14.6.2",
   }
 }
