--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0",
     "tslint": "^5.5.0",
-    "@types/node": "14.6.2",
+    "@types/node": "14.6.2"
   }
 }
