--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "typescript": "2.4.2",
+    "typescript": "^2.4.2",
     "socket.io": "^2.1.1",
     "winston": "^2.3.1",
      "dot-prop": ">=4.2.1"
