--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@types/express": "^4.0.36",
-    "@types/node": "^8.0.15",
+    "@types/node": "7.0.7",
     "@types/winston": "^2.3.4",
     "@types/cors": "^2.8.4",
     "@types/socket.io": "^2.1.0",
@@ -30,7 +30,6 @@
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0",
-    "tslint": "^5.5.0",
-    "@types/node": "14.6.2"
+    "tslint": "^5.5.0"
   }
 }
