--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0",
     "tslint": "^5.5.0",
-        "@types/node": "~8.9.4"
+        "@types/node": "^8.9.4"
   }
 }
