--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   "dependencies": {
     "@types/express": "^4.0.36",
     "@types/winston": "^2.3.4",
+    "@types/node": "^8.0.16",
     "@types/cors": "^2.8.4",
     "@types/socket.io": "^2.1.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "typescript": "3.5.1",
+    "typescript": "^2.4.2",
     "socket.io": "^2.1.1",
     "winston": "^2.3.1",
-     "dot-prop": ">=4.2.1"
+    "dot-prop": "^4.2.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0",
-    "tslint": "^5.5.0",
-        "@types/node": "^8.9.4"
+    "tslint": "^5.5.0"
   }
 }
